2002-03-13  Werner Koch  <wk@gnupg.org>

	* cms.h (value_tree_s): New and use it for recp_info.
	* cms.c (release_value_tree): New.
	(ksba_cms_release): And use it here.
	(ksba_cms_get_issuer_serial): Use the new recp_list structure and
	take the IDX into account.
	(ksba_cms_get_enc_val): Ditto.
	(ksba_cms_set_sig_val,ksba_cms_set_enc_val): Don't store a leading
	zero.

	* cms-parser.c (_ksba_cms_parse_enveloped_data_part_1): Handle
	multiple recipients.

	* cms.c (build_signed_data_rest): Write 3 end tags.
	(ct_build_enveloped_data): Write 4 end tags.

2002-03-12  Werner Koch  <wk@gnupg.org>

	* cms-parser.c (_ksba_cms_parse_signed_data_part_2): Allow an
	empty set of signer infos.

2002-03-11  Werner Koch  <wk@gnupg.org>

	* keyinfo.c: Fixed last change; forgot to set the length.

2002-03-09  Werner Koch  <wk@gnupg.org>

	* keyinfo.c: Add algo for Telesec NetKey cards.

2002-02-19  Werner Koch  <wk@gnupg.org>

	* cert.c (ksba_cert_get_cert_policies): New.

2002-02-07  Werner Koch  <wk@gnupg.org>

	* cert.c (ksba_cert_release): Release the nodes.

2002-02-01  Marcus Brinkmann  <marcus@g10code.de>

	* asn1-parse.y: Add missing colon at end of block.

2002-02-01  Werner Koch  <wk@gnupg.org>

	* cms.c (ksba_cms_set_sig_val): Add kludge to allow "rsa" instead
	of an OID.

2002-01-28  Werner Koch  <wk@gnupg.org>

	* oid.c (ksba_oid_from_str): Fixed docs and return type.

	* certreq.c (ksba_certreq_set_subject): Renamed to..
	(ksba_certreq_add_subject): this and added logic to store
	subjectAltNames.
	(build_extensions): New.
	(build_cri): Write the extensions.

	* ber-help.c (_ksba_ber_encode_tl): New.

2002-01-25  Werner Koch  <wk@gnupg.org>

	* cms.c (build_signed_data_attributes): Write the optional certs.
	* cert.c (ksba_cert_get_image): Don't return the image length but
	the parsed length.

2002-01-24  Werner Koch  <wk@gnupg.org>

	* cms.h: Add new member cert_info_list. 
	* cms.c (ksba_cms_add_cert): New.
	(ksba_cms_release): Release the cert info list.
